# unit-converter

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: pages.yml  release.yml
data/interim/: README.md  nist_sp811_appendix_b9_conversions.csv
docs/: api-reference.md  errors.md  index.md  quickstart.md  supported-units.md
docs/assets/: supported-units-filter.css  supported-units-filter.js
release/: README.md  v1.0.0.md  v1.1.0.md  v1.2.0.md  v1.3.0.md
schemas/: conversions.schema.json  physical_quantity_conversions.schema.json  unit_catalog.schema.json
scripts/: convert_csv_to_package_data.py  extract_nist_sp811_appendix_b9.py  generate_full_list_unit_catalog.py  generate_supported_units_doc.py  generate_ui_unit_catalog.py  map_ui_categories_to_units.py
src/unit_converter/: __init__.py  catalog.py  converter.py  exceptions.py
src/unit_converter/data/: __init__.py  conversions.json  physical_quantity_conversions.json  unit_catalog.json
standards/raw/: README.md
tests/: test_converter.py  test_package_data.py
