[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "unit-converter"
version = "1.0.0"
description = "A standards-backed Python package for unit conversion."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "KennyZhou2022" }
]
keywords = ["units", "conversion", "measurement"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pypdf>=5",
  "pytest>=8",
  "ruff>=0.5",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[project.urls]
Repository = "https://github.com/KennyZhou2022/unit-converter"

[tool.hatch.build.targets.wheel]
packages = ["src/unit_converter"]

[tool.hatch.build.targets.sdist]
include = [
  "/docs",
  "/README.md",
  "/LICENSE",
  "/mkdocs.yml",
  "/pyproject.toml",
  "/schemas",
  "/scripts",
  "/src",
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["unit_converter"]
